# gm

./: CMakeLists.txt  CREATURES.H  allitems.h  consoleapp.h  creatures.h  effects.h  enemies.h  feature.txt  items.h  items_list.h  itemsdrop.h  locations.h  log.json  log.txt  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters  map.h  menuoptions.h  progress_save.h  pve.h  trader.h
Debug/: vc143.idb
Debug/main.tlog/: main.lastbuildstate
txt/: arena.txt  attack_choose.txt  buy_menu.txt  buy_trader_save_menu.txt  dropped_item_choose.txt  help.txt  item_upgrade_menu.txt  map.txt  potion_menu.txt  skill_menu.txt  trader.txt
x64/Debug/: main.exe.recipe  main.ilk  main.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.lastbuildstate
x64/Release/: main.exe.recipe  main.iobj  main.ipdb
x64/Release/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.lastbuildstate
